--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -5,5 +5,6 @@
     "moduleResolution": "node"
   },
   "include": [
-    "vite.config.ts", ".eslintrc.js", "./dsv-plugin.ts"]
+    "vite.config.ts",
+    ".eslintrc.cjs", "./dsv-plugin.ts"]
 }
