chore: move download rates command to a standalone script

--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "dev": "yarn download-csv && vite",
     "build": "tsc && vite build",
     "preview": "vite preview",
-    "download-csv": "curl https://www.cnb.cz/cs/financni-trhy/devizovy-trh/kurzy-devizoveho-trhu/kurzy-devizoveho-trhu/denni_kurz.txt | cat | tail -n +2 > ./src/data/denni_kurz.csv"
+    "download-csv": "sh ./scripts/download-rates.sh"
   },
   "dependencies": {
     "d3-dsv": "^3.0.1",
